# Earl

./: CMakeLists.txt  README.md
include/: earl.hpp
include/Earl/: application.hpp  entryPoint.hpp  log.hpp
include/Earl/Events/: event.hpp
src/Earl/: application.cpp  entryPoint.cpp  log.cpp
src/Earl/Events/: event.cpp
